# sphinx-peek

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  other.rst
docs/_static/: custom.css
src/sphinx_peek/: __init__.py
src/sphinx_peek/assets/: sphinx_peek.css  sphinx_peek.js
