[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_peek"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["sphinx", "extension", "preview"]
requires-python = ">=3.8"
dependencies = ["sphinx"]

[project.urls]
Homepage = "https://github.com/sphinx-extensions2/sphinx-peek"
Documentation = "https://sphinx-peek.readthedocs.io/"

[project.optional-dependencies]
testing = ["pytest"]
"docs" = ["furo", "sphinxcontrib-video"]

[tool.ruff]
line-length = 100
extend-select = ["B0", "C4", "I", "ICN", "ISC", "N", "RUF", "SIM", "UP"]
extend-ignore = ["ISC001", "RUF009"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
strict = true
show_error_codes = true
